fix: 회원 정보 오류 수정